# NET4104-human-detection

./: .gitignore  .gitmodules  CMakeLists.txt  Feuille_de_route.md  Makefile  README.md  csi-recv.sh  csi-send.sh  requierements.txt
csi_recv/: CMakeLists.txt  idf_component.yaml  radar_evaluate.c  recv.c
csi_send/: CMakeLists.txt  idf_component.yaml  sender.c
live-transmission/: Makefile  gen_dataset.py  live-transmission.py  requirements.txt
live-transmission/data/someone/: 2024-04-23_21-04-56-762_104_0.csv  2024-04-30_11-55-07-601_104_0.csv
live-transmission/log/: csi_data.csv  radar_data.csv
python/: 2024-04-09_10-47-49-658_104_1.csv  2024-04-09_12-37-33-975_104_1.csv  Makefile  analyze.py  apprentissage.py  click_automatique.py  gen_dataset.py  go.m4a  human-detection-analyse.py  requirements.txt  stop.m4a
python/enregistrement/: allonge_0.csv  allonge_1.csv  allonge_10.csv  allonge_11.csv  allonge_2.csv  allonge_3.csv  allonge_4.csv  allonge_5.csv  allonge_6.csv  allonge_7.csv  allonge_8.csv  allonge_9.csv  debout_0.csv  debout_1.csv  debout_10.csv  debout_11.csv  debout_12.csv  debout_13.csv  debout_14.csv  debout_2.csv  debout_3.csv  debout_4.csv  debout_5.csv  debout_6.csv  debout_7.csv  debout_8.csv  debout_9.csv  episode_1.csv  episode_2.csv  rien_1.csv  rien_2.csv  rien_3.csv  rien_4.csv  rien_5.csv  rien_6.csv
python/new_enregistrements/: re.py
python/new_enregistrements/allonge/: 2024-04-28_14-58-11-975_104_1.csv  2024-04-28_14-58-45-528_104_1.csv  2024-04-28_14-59-19-158_104_1.csv  2024-04-28_14-59-52-926_104_1.csv  allonge_2.csv  (+3 more)
(+54 files in other folders)
